[gd_scene load_steps=2 format=3 uid="uid://yhnymh84p31j"]

[ext_resource type="Script" path="res://Scenes/AlchemySpells/Ivystream/Scripts/ivystream.gd" id="1_cm1hg"]

[node name="Ivystream" type="Node2D"]
script = ExtResource("1_cm1hg")

[node name="DieTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 6.0
one_shot = true
autostart = true

[node name="NextIvy" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="DieTimer" to="." method="_on_die_timer_timeout"]
[connection signal="timeout" from="NextIvy" to="." method="_on_next_ivy_timeout"]
